--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -1,10 +1,18 @@
 name: Test
 description: Test yutu
 
+inputs:
+  coverage_file:
+    description: 'Coverage output file'
+    required: false
+    default: './cover.out'
+
 runs:
   using: composite
   steps:
     - shell: bash
+      env:
+        COVERAGE_FILE: ${{ inputs.coverage_file }}
       run: |
-        go test -v ./...
+        go test ./... -coverprofile=$COVERAGE_FILE -coverpkg="./pkg/..."
         ./scripts/command-test.sh
