--- a/pkg/BUILD.bazel
+++ b/pkg/BUILD.bazel
@@ -2,7 +2,10 @@ load("@rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "pkg",
-    srcs = ["interface.go"],
+    srcs = [
+        "fs.go",
+        "interface.go",
+    ],
     importpath = "github.com/eat-pray-ai/yutu/pkg",
     visibility = ["//visibility:public"],
 )
