--- a/pkg/auth/BUILD.bazel
+++ b/pkg/auth/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@rules_go//go:def.bzl", "go_library")
+load("@rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "auth",
@@ -15,4 +15,10 @@ go_library(
         "@org_golang_x_oauth2//:oauth2",
         "@org_golang_x_oauth2//google",
     ],
+)
+
+go_test(
+    name = "auth_test",
+    srcs = ["service_test.go"],
+    embed = [":auth"],
 )
