--- a/pkg/channelSection/BUILD.bazel
+++ b/pkg/channelSection/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
     importpath = "github.com/eat-pray-ai/yutu/pkg/channelSection",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg",
         "//pkg/auth",
         "//pkg/utils",
         "@com_github_jedib0t_go_pretty_v6//table",
@@ -17,5 +18,5 @@ go_test(
     name = "channelSection_test",
     srcs = ["channelSection_test.go"],
     embed = [":channelSection"],
-    deps = ["//pkg/utils"],
+    deps = ["@org_golang_google_api//youtube/v3:youtube"],
 )
