--- a/pkg/video/BUILD.bazel
+++ b/pkg/video/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
     importpath = "github.com/eat-pray-ai/yutu/pkg/video",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg",
         "//pkg/auth",
         "//pkg/playlistItem",
         "//pkg/thumbnail",
@@ -19,5 +20,5 @@ go_test(
     name = "video_test",
     srcs = ["video_test.go"],
     embed = [":video"],
-    deps = ["//pkg/utils"],
+    deps = ["@org_golang_google_api//youtube/v3:youtube"],
 )
