--- a/pkg/videoAbuseReportReason/BUILD.bazel
+++ b/pkg/videoAbuseReportReason/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
     importpath = "github.com/eat-pray-ai/yutu/pkg/videoAbuseReportReason",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg",
         "//pkg/auth",
         "//pkg/utils",
         "@com_github_jedib0t_go_pretty_v6//table",
@@ -17,4 +18,5 @@ go_test(
     name = "videoAbuseReportReason_test",
     srcs = ["videoAbuseReportReason_test.go"],
     embed = [":videoAbuseReportReason"],
+    deps = ["@org_golang_google_api//youtube/v3:youtube"],
 )
