--- a/cmd/comment/BUILD.bazel
+++ b/cmd/comment/BUILD.bazel
@@ -15,6 +15,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//cmd",
+        "//pkg",
         "//pkg/comment",
         "//pkg/utils",
         "@com_github_mark3labs_mcp_go//mcp",
