--- a/cmd/subscription/BUILD.bazel
+++ b/cmd/subscription/BUILD.bazel
@@ -12,6 +12,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//cmd",
+        "//pkg",
         "//pkg/subscription",
         "//pkg/utils",
         "@com_github_mark3labs_mcp_go//mcp",
