--- a/cmd/video/BUILD.bazel
+++ b/cmd/video/BUILD.bazel
@@ -16,6 +16,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//cmd",
+        "//pkg",
         "//pkg/utils",
         "//pkg/video",
         "@com_github_mark3labs_mcp_go//mcp",
