--- a/cmd/caption/BUILD.bazel
+++ b/cmd/caption/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//cmd",
+        "//pkg",
         "//pkg/caption",
         "//pkg/utils",
         "@com_github_mark3labs_mcp_go//mcp",
