--- a/cmd/commentThread/BUILD.bazel
+++ b/cmd/commentThread/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//cmd",
+        "//pkg",
         "//pkg/commentThread",
         "@com_github_mark3labs_mcp_go//mcp",
         "@com_github_spf13_cobra//:cobra",
