--- a/cmd/BUILD.bazel
+++ b/cmd/BUILD.bazel
@@ -16,6 +16,7 @@ go_library(
         "CommitDate": "{STABLE_GIT_COMMIT_DATE}",
         "Os": "{STABLE_OS}",
         "Arch": "{STABLE_ARCH}",
+        "Builder": "{STABLE_Builder}",
     },
     deps = [
         "//pkg",
