--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -9,29 +9,25 @@
 # the `language` matrix defined below to confirm you have the correct set of
 # supported CodeQL languages.
 #
-name: "CodeQL"
+name: "CodeQL Advanced"
 
 on:
   push:
     branches:
       - '*'
     paths:
-      - 'cmd/**'
-      - 'pkg/**'
-      - 'scripts/**'
-      - 'go.mod'
-      - 'main.go'
-      - '.github/workflows/codeql.yml'
+      - 'go.*'
+      - '**/*.go'
+      - '**/*.yml'
+      - '**/*.yaml'
   pull_request:
     branches:
       - '*'
     paths:
-      - 'cmd/**'
-      - 'pkg/**'
-      - 'scripts/**'
-      - 'go.mod'
-      - 'main.go'
-      - '.github/workflows/codeql.yml'
+      - 'go.*'
+      - '**/*.go'
+      - '**/*.yml'
+      - '**/*.yaml'
   schedule:
     - cron: '33 3 * * 3'
 
@@ -44,7 +40,6 @@ jobs:
     #   - https://gh.io/using-larger-runners (GitHub.com only)
     # Consider using larger runners or machines with greater resources for possible analysis time improvements.
     runs-on: ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-latest' }}
-    timeout-minutes: ${{ (matrix.language == 'swift' && 120) || 360 }}
     permissions:
       # required for all workflows
       security-events: write
@@ -60,9 +55,11 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - language: actions
+            build-mode: none
           - language: go
             build-mode: autobuild
-        # CodeQL supports the following values keywords for 'language': 'c-cpp', 'csharp', 'go', 'java-kotlin', 'javascript-typescript', 'python', 'ruby', 'swift'
+        # CodeQL supports the following values keywords for 'language': 'actions', 'c-cpp', 'csharp', 'go', 'java-kotlin', 'javascript-typescript', 'python', 'ruby', 'rust', 'swift'
         # Use `c-cpp` to analyze code written in C, C++ or both
         # Use 'java-kotlin' to analyze code written in Java, Kotlin or both
         # Use 'javascript-typescript' to analyze code written in JavaScript, TypeScript or both
@@ -73,6 +70,12 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
+
+      # Add any setup steps before running the `github/codeql-action/init` action.
+      # This includes steps like installing compilers or runtimes (`actions/setup-node`
+      # or others). This is typically only required for manual builds.
+      # - name: Setup runtime (example)
+      #   uses: actions/setup-example@v1
 
       # Initializes the CodeQL tools for scanning.
       - name: Initialize CodeQL
@@ -94,6 +97,7 @@ jobs:
       # ℹ️ Command-line programs to run using the OS shell.
       # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
       - if: matrix.build-mode == 'manual'
+        shell: bash
         run: |
           echo 'If you are using a "manual" build mode for one or more of the' \
             'languages you are analyzing, replace this with the commands to build' \
