:construction_worker: Extract inputs when build images

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,11 @@ on:
   workflow_dispatch:
   push:
     tags:
-      - "v*"
+      - 'v*'
+      - '!*.*.*-rc*'
+      - '!*.*.*-beta*'
+      - '!*.*.*-alpha*'
+      - '!*.*.*-dev*'
 
 permissions: read-all
 
