--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -20,6 +20,8 @@ on:
       - '**/*.go'
       - '**/*.yml'
       - '**/*.yaml'
+    tags-ignore:
+      - '*'
   pull_request:
     branches:
       - '*'
