--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,20 +4,18 @@ on:
   workflow_dispatch:
   push:
     paths:
-      - 'cmd/**'
-      - 'pkg/**'
+      - 'go.*'
+      - '**/*.go'
       - 'scripts/**'
-      - 'go.mod'
-      - 'main.go'
       - '.github/actions/test/**'
       - '.github/workflows/test.yml'
+    tags-ignore:
+      - '*'
   pull_request:
     paths:
-      - 'cmd/**'
-      - 'pkg/**'
+      - 'go.*'
+      - '**/*.go'
       - 'scripts/**'
-      - 'go.mod'
-      - 'main.go'
       - '.github/actions/test/**'
       - '.github/workflows/test.yml'
 
@@ -30,7 +28,6 @@ env:
 jobs:
   test:
     runs-on: ubuntu-latest
-    if: ${{ !startsWith(github.ref, 'refs/tags/') }}
     steps:
       - uses: actions/checkout@v5
       - uses: actions/setup-go@v6
