:boom: Init agent support

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -26,6 +26,8 @@ use_repo(
     "com_github_spf13_pflag",
     "com_github_spf13_viper",
     "in_gopkg_yaml_v3",
+    "org_golang_google_adk",
     "org_golang_google_api",
+    "org_golang_google_genai",
     "org_golang_x_oauth2",
 )
