--- a/pkg/BUILD.bazel
+++ b/pkg/BUILD.bazel
@@ -9,4 +9,5 @@ go_library(
     ],
     importpath = "github.com/eat-pray-ai/yutu/pkg",
     visibility = ["//visibility:public"],
+    deps = ["@com_github_jedib0t_go_pretty_v6//table"],
 )
