--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,10 +4,6 @@ on:
   push:
     tags:
       - 'v*'
-      - '!*.*.*-rc*'
-      - '!*.*.*-beta*'
-      - '!*.*.*-alpha*'
-      - '!*.*.*-dev*'
 
 permissions: read-all
 
@@ -23,8 +19,6 @@ jobs:
       - uses: actions/setup-go@v6
         with:
           go-version-file: ./go.mod
-      - name: Test
-        uses: eat-pray-ai/yutu/.github/actions/test@main
       - name: Run goreleaser
         uses: goreleaser/goreleaser-action@v6
         env:
@@ -68,7 +62,12 @@ jobs:
   winget:
     needs: [goreleaser]
     runs-on: windows-latest
-    if: startsWith(github.ref, 'refs/tags/')
+    if: |
+      startsWith(github.ref, 'refs/tags/') && 
+      !endsWith(github.ref, '-rc') && 
+      !endsWith(github.ref, '-beta') && 
+      !endsWith(github.ref, '-alpha') && 
+      !endsWith(github.ref, '-dev')
     steps:
       - uses: vedantmgoyal9/winget-releaser@main
         with:
@@ -87,4 +86,7 @@ jobs:
       attestations: write
       id-token: write
     steps:
-      - uses: eat-pray-ai/yutu/.github/actions/github-packages@main
+      - uses: eat-pray-ai/yutu/.github/actions/github-registry@main
+        with:
+          arm64_binary: yutu_linux_arm64_v8.0/yutu-linux-arm64
+          amd64_binary: yutu_linux_amd64_v1/yutu-linux-amd64
