--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,10 @@ on:
   push:
     tags:
       - 'v*'
+      - '*.*.*-rc*'
+      - '*.*.*-beta*'
+      - '*.*.*-alpha*'
+      - '*.*.*-dev*'
 
 permissions: read-all
 
@@ -13,7 +17,7 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: actions/checkout@v5
+      - uses: actions/checkout@v6
         with:
           fetch-depth: 0
       - uses: actions/setup-go@v6
@@ -27,7 +31,7 @@ jobs:
           distribution: goreleaser
           args: release --clean
       - name: Upload artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v6
         with:
           name: binary
           path: dist/yutu_*/yutu-*
@@ -51,7 +55,7 @@ jobs:
           - windows_arm64_v8.0/yutu-windows-arm64.exe
     steps:
       - name: Download artifact
-        uses: actions/download-artifact@v5
+        uses: actions/download-artifact@v7
         with:
           name: binary
       - name: Attest
