--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,7 @@ on:
     paths:
       - 'go.*'
       - '**/*.go'
+      - '**/*.bazel'
       - 'scripts/**'
       - '.github/workflows/test.yml'
     tags-ignore:
@@ -18,6 +19,7 @@ on:
     paths:
       - 'go.*'
       - '**/*.go'
+      - '**/*.bazel'
       - 'scripts/**'
       - '.github/workflows/test.yml'
 
@@ -54,6 +56,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
       - uses: bazel-contrib/setup-bazel@0.16.0
 #        with:
 #          bazelisk-cache: true
@@ -66,13 +70,7 @@ jobs:
         shell: bash
         run: |
           bazel run @rules_go//go -- mod tidy -v
-      - name: bazel mod tidy
-        shell: bash
-        run: |
           bazel mod tidy
-      - name: bazel generate
-        shell: bash
-        run: |
           bazel run @rules_go//go -- install github.com/tc-hib/go-winres@latest
           bazel run @rules_go//go -- generate ./...
       - name: Bazel test
