--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -11,6 +11,7 @@ project_name: yutu
 
 env:
   - MODULE_PATH=github.com/{{ if index .Env "GITHUB_REPOSITORY"  }}{{ .Env.GITHUB_REPOSITORY }}{{ else }}eat-pray-ai/yutu{{ end }}
+  - LATEST_RELEASE={{ if filter .Tag "rc|beta|alpha|dev" }}false{{ else }}true{{ end }}
   - Builder={{ if index .Env "GITHUB_ACTOR"  }}{{ .Env.GITHUB_ACTOR }}{{ else }}Gopher{{ end }}
 
 before:
@@ -98,3 +99,5 @@ changelog:
 
 release:
   discussion_category_name: General
+  prerelease: auto
+  make_latest: "{{ .Env.LATEST_RELEASE }}"
