--- a/cmd/activity/BUILD.bazel
+++ b/cmd/activity/BUILD.bazel
@@ -25,6 +25,7 @@ go_test(
     embed = [":activity"],
     deps = [
         "//pkg/activity",
+        "@com_github_google_jsonschema_go//jsonschema",
         "@com_github_stretchr_testify//assert",
         "@org_golang_google_api//option",
         "@org_golang_google_api//youtube/v3:youtube",
