:see_no_evil: Ignore html

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ qodana.yaml
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+*.html
 genhtml
 
 # Dependency directories (remove the comment below to include it)
