--- a/cmd/BUILD.bazel
+++ b/cmd/BUILD.bazel
@@ -4,6 +4,7 @@ go_library(
     name = "cmd",
     srcs = [
         "auth.go",
+        "handler.go",
         "mcp.go",
         "root.go",
         "version.go",
