--- a/pkg/caption/BUILD.bazel
+++ b/pkg/caption/BUILD.bazel
@@ -18,5 +18,8 @@ go_test(
     name = "caption_test",
     srcs = ["caption_test.go"],
     embed = [":caption"],
-    deps = ["@org_golang_google_api//youtube/v3:youtube"],
+    deps = [
+        "//pkg",
+        "@org_golang_google_api//youtube/v3:youtube",
+    ],
 )
