--- a/pkg/channelSection/BUILD.bazel
+++ b/pkg/channelSection/BUILD.bazel
@@ -18,5 +18,8 @@ go_test(
     name = "channelSection_test",
     srcs = ["channelSection_test.go"],
     embed = [":channelSection"],
-    deps = ["@org_golang_google_api//youtube/v3:youtube"],
+    deps = [
+        "//pkg",
+        "@org_golang_google_api//youtube/v3:youtube",
+    ],
 )
