--- a/pkg/comment/BUILD.bazel
+++ b/pkg/comment/BUILD.bazel
@@ -18,5 +18,8 @@ go_test(
     name = "comment_test",
     srcs = ["comment_test.go"],
     embed = [":comment"],
-    deps = ["@org_golang_google_api//youtube/v3:youtube"],
+    deps = [
+        "//pkg",
+        "@org_golang_google_api//youtube/v3:youtube",
+    ],
 )
