--- a/pkg/commentThread/BUILD.bazel
+++ b/pkg/commentThread/BUILD.bazel
@@ -18,5 +18,8 @@ go_test(
     name = "commentThread_test",
     srcs = ["commentThread_test.go"],
     embed = [":commentThread"],
-    deps = ["@org_golang_google_api//youtube/v3:youtube"],
+    deps = [
+        "//pkg",
+        "@org_golang_google_api//youtube/v3:youtube",
+    ],
 )
