--- a/pkg/i18nLanguage/BUILD.bazel
+++ b/pkg/i18nLanguage/BUILD.bazel
@@ -18,5 +18,8 @@ go_test(
     name = "i18nLanguage_test",
     srcs = ["i18nLanguage_test.go"],
     embed = [":i18nLanguage"],
-    deps = ["@org_golang_google_api//youtube/v3:youtube"],
+    deps = [
+        "//pkg",
+        "@org_golang_google_api//youtube/v3:youtube",
+    ],
 )
