--- a/pkg/i18nRegion/BUILD.bazel
+++ b/pkg/i18nRegion/BUILD.bazel
@@ -18,5 +18,8 @@ go_test(
     name = "i18nRegion_test",
     srcs = ["i18nRegion_test.go"],
     embed = [":i18nRegion"],
-    deps = ["@org_golang_google_api//youtube/v3:youtube"],
+    deps = [
+        "//pkg",
+        "@org_golang_google_api//youtube/v3:youtube",
+    ],
 )
