--- a/pkg/playlist/BUILD.bazel
+++ b/pkg/playlist/BUILD.bazel
@@ -18,5 +18,8 @@ go_test(
     name = "playlist_test",
     srcs = ["playlist_test.go"],
     embed = [":playlist"],
-    deps = ["@org_golang_google_api//youtube/v3:youtube"],
+    deps = [
+        "//pkg",
+        "@org_golang_google_api//youtube/v3:youtube",
+    ],
 )
