--- a/pkg/subscription/BUILD.bazel
+++ b/pkg/subscription/BUILD.bazel
@@ -18,5 +18,8 @@ go_test(
     name = "subscription_test",
     srcs = ["subscription_test.go"],
     embed = [":subscription"],
-    deps = ["@org_golang_google_api//youtube/v3:youtube"],
+    deps = [
+        "//pkg",
+        "@org_golang_google_api//youtube/v3:youtube",
+    ],
 )
