--- a/pkg/superChatEvent/BUILD.bazel
+++ b/pkg/superChatEvent/BUILD.bazel
@@ -18,5 +18,8 @@ go_test(
     name = "superChatEvent_test",
     srcs = ["superChatEvent_test.go"],
     embed = [":superChatEvent"],
-    deps = ["@org_golang_google_api//youtube/v3:youtube"],
+    deps = [
+        "//pkg",
+        "@org_golang_google_api//youtube/v3:youtube",
+    ],
 )
