--- a/pkg/videoAbuseReportReason/BUILD.bazel
+++ b/pkg/videoAbuseReportReason/BUILD.bazel
@@ -18,5 +18,8 @@ go_test(
     name = "videoAbuseReportReason_test",
     srcs = ["videoAbuseReportReason_test.go"],
     embed = [":videoAbuseReportReason"],
-    deps = ["@org_golang_google_api//youtube/v3:youtube"],
+    deps = [
+        "//pkg",
+        "@org_golang_google_api//youtube/v3:youtube",
+    ],
 )
