--- a/pkg/commentThread/BUILD.bazel
+++ b/pkg/commentThread/BUILD.bazel
@@ -20,6 +20,7 @@ go_test(
     embed = [":commentThread"],
     deps = [
         "//pkg/common",
+        "@org_golang_google_api//option",
         "@org_golang_google_api//youtube/v3:youtube",
     ],
 )
