--- a/pkg/video/BUILD.bazel
+++ b/pkg/video/BUILD.bazel
@@ -22,6 +22,7 @@ go_test(
     embed = [":video"],
     deps = [
         "//pkg/common",
+        "@org_golang_google_api//option",
         "@org_golang_google_api//youtube/v3:youtube",
     ],
 )
