--- a/pkg/watermark/BUILD.bazel
+++ b/pkg/watermark/BUILD.bazel
@@ -18,6 +18,7 @@ go_test(
     embed = [":watermark"],
     deps = [
         "//pkg/common",
+        "@org_golang_google_api//option",
         "@org_golang_google_api//youtube/v3:youtube",
     ],
 )
