--- a/cmd/channelBanner/BUILD.bazel
+++ b/cmd/channelBanner/BUILD.bazel
@@ -12,6 +12,7 @@ go_library(
         "//cmd",
         "//pkg",
         "//pkg/channelBanner",
+        "//pkg/utils",
         "@com_github_google_jsonschema_go//jsonschema",
         "@com_github_modelcontextprotocol_go_sdk//mcp",
         "@com_github_spf13_cobra//:cobra",
