--- a/cmd/commentThread/BUILD.bazel
+++ b/cmd/commentThread/BUILD.bazel
@@ -13,6 +13,7 @@ go_library(
         "//cmd",
         "//pkg",
         "//pkg/commentThread",
+        "//pkg/utils",
         "@com_github_google_jsonschema_go//jsonschema",
         "@com_github_modelcontextprotocol_go_sdk//mcp",
         "@com_github_spf13_cobra//:cobra",
