--- a/pkg/utils/BUILD.bazel
+++ b/pkg/utils/BUILD.bazel
@@ -7,8 +7,8 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "@com_github_google_jsonschema_go//jsonschema",
-        "@com_github_modelcontextprotocol_go_sdk//mcp",
         "@com_github_ohler55_ojg//jp",
+        "@com_github_spf13_cobra//:cobra",
         "@com_github_spf13_pflag//:pflag",
         "@in_gopkg_yaml_v3//:yaml_v3",
     ],
@@ -20,7 +20,6 @@ go_test(
     embed = [":utils"],
     deps = [
         "@com_github_google_jsonschema_go//jsonschema",
-        "@com_github_modelcontextprotocol_go_sdk//mcp",
         "@com_github_spf13_cobra//:cobra",
         "@com_github_spf13_pflag//:pflag",
     ],
