--- a/pkg/auth/BUILD.bazel
+++ b/pkg/auth/BUILD.bazel
@@ -20,6 +20,13 @@ go_library(
 
 go_test(
     name = "auth_test",
-    srcs = ["service_test.go"],
+    srcs = [
+        "auth_test.go",
+        "service_test.go",
+    ],
     embed = [":auth"],
+    deps = [
+        "//pkg",
+        "@org_golang_x_oauth2//:oauth2",
+    ],
 )
